k8s/analytics-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
  namespace: analytics
  labels:
    app: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics
        image: tush1809/analytics:latest
        ports:
          - containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
