k8s/data-upload-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-upload-deployment
  namespace: analytics
  labels:
    app: data-upload-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-upload-service
  template:
    metadata:
      labels:
        app: data-upload-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: data-upload
        image: tush1809/data-upload:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5002
        resources:
          requests:
            cpu: "10m"
            memory: "50Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: data-upload-service
  namespace: analytics
spec:
  selector:
    app: data-upload-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
